# jws-master

./: package-lock.json  package.json  tailwind.config.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Adzan/: Adzan.tsx
src/components/AudioAdzan/: AudioAdzan.tsx
src/components/AudioJelang/: TartilTarhim.tsx
src/components/Brand/: Brand.tsx  BrandAlamat.tsx  BrandLogo.tsx  BrandName.tsx  BrandType.tsx
src/components/Form/: formAudioAdzan.tsx  formAudioTarhim.tsx  formAudioTartil.tsx  formDisp.tsx  formInfo.tsx  formJws.tsx  formMasjid.tsx  formMedia.tsx  formOntime.tsx  formRtext.tsx  formSlideImage.tsx  formSlideText.tsx
src/components/InfoJumat/: Info.tsx  LaporanKas.tsx  PetugasJumat.tsx
src/components/Iqomat/: Iqomat.tsx
src/components/Jam/: Jam.tsx
src/components/Jelang/: Jelang.tsx  JelangCountDown.tsx  JelangNext.tsx
src/components/JelangSholat/: JelangSholat.tsx
src/components/JwsSlides/: JwsSlides.tsx  JwsSlidesSmall.tsx
src/components/Khutbah/: Khutbah.tsx
src/components/Moment/: Moment.tsx
src/components/Ontime/: Ontime.tsx
src/components/RunningText/: RunningText.tsx
src/components/Sholat/: Sholat.tsx
src/components/Slides/: LiveVideo.tsx  Slide.tsx  SlideImages.tsx  SlideText.tsx
src/components/Tanggal/: Tanggal.tsx  Tanggal2.tsx  TanggalHijriyah.tsx  TanggalMasehi.tsx
src/contexts/: colorsContext.tsx  dataContexts.tsx  prayersContext.tsx
src/lib/: connect.ts  upload.ts
src/page/: FormSetting.tsx  Layar.tsx  Utama.tsx
