[package]
name = "my-jws"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "http-all", "path-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
salah = "0.7.0"
chrono = { version = "0.4.24", features = ["serde"] }
chrono-tz = "0.8.2"
home = "0.5.5"
dotenv = "0.15.0"

[dependencies.tauri-plugin-sqlite]
git = "https://github.com/lzdyes/tauri-plugin-sqlite"
tag = "v0.1.1"

[dependencies.sqlite3-sys]
version = "^0.13"
optional = true

[dependencies.sqlite3-src]
version = "^0.3"
features = ["bundled"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
